fix nav gap

--- a/public/css/social.scss
+++ b/public/css/social.scss
@@ -1,7 +1,7 @@
 nav,
 #social {
     display: flex;
-    gap: 10px;
+    gap: 0 10px;
 }
 
 nav {
